--- a/crm_tbm_advanced/views/crm_lead_views.xml
+++ b/crm_tbm_advanced/views/crm_lead_views.xml
@@ -6,10 +6,10 @@
         <field name="inherit_id" ref="crm.crm_case_form_view_leads"/>
         <field name="arch" type="xml">
             <xpath expr="//form" position="replace">
-                <form string="Leads Form">
+                <form string="Leads Form" class="leads_form">
                     <header>
                         <button name="%(crm.action_crm_lead2opportunity_partner)d" string="Convert to Opportunity" type="action"
-                                help="Convert to Opportunity" class="oe_highlight" attrs="{'invisible': [('type', '=', 'opportunity')]}"/>
+                                help="Convert to Opportunity" class="oe_highlight" groups="sales_team.group_sale_manager,sales_team_security.group_sale_team_manager" attrs="{'invisible': [('type', '=', 'opportunity')]}"/>
                         <button name="toggle_active"
                             string="Restore"
                             type="object"
@@ -69,7 +69,7 @@
                                 <field name="mobile"/>
                             </group>
                             <group>
-                                <field name="bar_service" widget="radio" options="{'horizontal': true}"/>
+                                <field name="bar_service"/>
                                 <field name="years_business" />
                                 <field name="annual_revenue" widget="monetary"
                        options="{'no_open': True, 'currency_field': 'currency_id', 'field_digits': True}"/>
@@ -140,11 +140,40 @@
         </field>
     </record>
 
+    <record id="view_partner_tbm_form" model="ir.ui.view">
+        <field name="name">res.partner.tbm.form</field>
+        <field name="model">res.partner</field>
+        <field name="arch" type="xml">
+            <form string="Create Contact">
+                <field name="is_company" invisible="1" />
+                <field name="type" invisible="1" />
+                <group>
+                    <group>
+                        <field name="name" string="Contact Name" readonly="1" />
+                        <field name="lastname" required="1" />
+                        <field name="firstname" required="1" />
+                        <field name="title" placeholder="e.g. Mr." />
+                        <field name="function" placeholder="e.g. Sales Director" attrs="{'invisible': [('is_company','=', True)]}"/>
+                        <field name="email" widget="email" context="{'gravatar_image': True}" required="1"/>
+                        <field name="phone" widget="phone"/>
+                        <field name="mobile" widget="phone"/>
+                    </group>
+                </group>
+            </form>
+        </field>
+    </record>
+
     <record id="crm_case_form_view_oppor" model="ir.ui.view">
         <field name="name">crm.case.form.view.oppor.tbm</field>
         <field name="model">crm.lead</field>
         <field name="inherit_id" ref="crm.crm_case_form_view_oppor"/>
         <field name="arch" type="xml">
+            <xpath expr="//header/button[@name='toggle_active']" position="replace">
+                <button name="toggle_active"
+                            string="Restore"
+                            type="object"
+                            attrs="{'invisible': [('active', '=', True)]}"/>
+            </xpath>
             <xpath expr="//h2[@class='o_row row no-gutters d-flex']" position="attributes">
                 <attribute name="invisible">1</attribute>
             </xpath>
@@ -155,7 +184,7 @@
                 <group>
                     <group>
                         <!-- Preload all the partner's information -->
-                        <field name="establishment_name" string="Name of Establishment"/>
+                        <field name="establishment_name" string="Name of Establishment" widget="res_partner_many2one" domain="[('is_company', '=', True)]" context="{'default_is_company': True}" required="1" />
                         <label for="street" string="Corporate Address"/>
                         <div class="o_address_format">
                             <field name="street" placeholder="Street..." class="o_address_street"/>
@@ -165,26 +194,23 @@
                             <field name="country_id" placeholder="Country" class="o_address_country" options='{"no_open": True, "no_create": True}'/>
                         </div>
                         <field name="location_count"/>
-                        <field name="partner_id" string="Customer"
-                                widget="res_partner_many2one"
-                                context="{'default_name': contact_name, 'default_street': street, 'default_city': city, 'default_state_id': state_id, 'default_zip': zip, 'default_country_id': country_id, 'default_function': function, 'default_phone': phone, 'default_mobile': mobile, 'default_email': email_from, 'default_user_id': user_id, 'default_team_id': team_id, 'default_website': website, 'show_vat': True}"
-                                groups="base.group_no_one" invisible="1"/>
                     </group>
                     <group>
-                        <field name="partner_id" string="Contact Name" />
+                        <field name="probability" invisible="1" />
+                        <field name="partner_id" string="Contact Name" domain="[('is_company', '=', False), ('parent_id', '=',  establishment_name)]" context="{'default_team_id': team_id, 'default_user_id': user_id, 'default_is_company': False, 'default_type': 'contact', 'tbm_partner': establishment_name, 'lead': [id], 'lead_prob': probability}" attrs="{'readonly': [('establishment_name', '=', False)]}" required="1" />
                         <field name="function"/>
                         <field name="is_blacklisted" invisible="1"/>
                         <label for="email_from" class="oe_inline"/>
                         <div class="o_row o_row_readonly">
                             <i class="fa fa-ban" style="color: red;" role="img" title="This email is blacklisted for mass mailing"
-                                aria-label="Blacklisted" attrs="{'invisible': [('is_blacklisted', '=', False)]}" groups="base.group_user"></i>
+                                aria-label="Blacklisted" attrs="{'invisible': [('is_blacklisted', '=', False)]}" groups="base.group_user" />
                             <field name="email_from" widget="email"/>
                         </div>
                         <field name="phone" widget="phone"/>
                         <field name="mobile"/>
                     </group>
                     <group>
-                        <field name="bar_service" widget="radio" options="{'horizontal': true}"/>
+                        <field name="bar_service"/>
                         <field name="years_business" />
                         <field name="annual_revenue" widget="monetary"
                options="{'no_open': True, 'currency_field': 'currency_id', 'field_digits': True}"/>
@@ -227,11 +253,16 @@
         </field>
     </record>
 
-    <record model="ir.actions.act_window" id="crm.crm_lead_all_leads">
-        <field name="context">{
-            'search_default_medium': 1
-            }
-        </field>
+    <record id="view_crm_case_opportunities_filter" model="ir.ui.view">
+            <field name="name">crm.lead.search.opportunity</field>
+            <field name="model">crm.lead</field>
+            <field name="priority">15</field>
+            <field name="inherit_id" ref="crm.view_crm_case_opportunities_filter"/>
+            <field name="arch" type="xml">
+                <xpath expr="//search/filter[@name='lost']" position="replace">
+                    <filter string="Lost" name="lost" domain="[('active', '=', False)]"/>
+                </xpath>
+            </field>
     </record>
 
     <record id="view_crm_case_leads_filter" model="ir.ui.view">
@@ -241,7 +272,7 @@
         <field name="arch" type="xml">
             <xpath expr="//search" position="replace">
                 <search string="Search Leads">
-                    <field name="name" filter_domain="['|','|','|',('partner_name', 'ilike', self),('email_from', 'ilike', self), ('contact_name', 'ilike', self), ('name', 'ilike', self)]"/>
+                    <field name="name" filter_domain="['|','|','|','|',('partner_name', 'ilike', self),('email_from', 'ilike', self), ('contact_name', 'ilike', self), ('name', 'ilike', self), ('street', 'ilike', self)]"/>
                     <field name="user_id"/>
                     <field name="team_id"/>
                     <field name="partner_id" operator="child_of" string="Customer"/>
@@ -269,7 +300,10 @@
                     <filter string="Serve alcohol and food" name="serve_both" domain="[('bar_service', '=', 'both')]"/>
                     <separator/>
                     <group expand="0" string="Group By">
-                        <filter string="Lead source" name="medium_id" domain="[]" context="{'group_by':'medium_id'}"/>
+                        <filter string="Salesperson" name="user_id" domain="[]" context="{'group_by':'user_id'}"/>
+                        <filter string="Sales Team" name="team_id" domain="[]" context="{'group_by':'team_id'}"/>
+                        <filter string="Lead Classification" name="classification" domain="[]" context="{'group_by':'classification'}"/>
+                        <filter string="Lead source" name="source_id" domain="[]" context="{'group_by':'source_id'}"/>
                         <filter string="Lead owner" name="lead_owner_id" domain="[]" context="{'group_by':'lead_owner_id'}"/>
                         <filter string="Name of Establishment" name="establishment" context="{'group_by':'partner_name'}" />
                         <filter string="Contact Name" name="contact_name" context="{'group_by':'contact_name'}" />
@@ -283,6 +317,20 @@
                     </group>
                 </search>
             </xpath>
+        </field>
+    </record>
+
+    <record model="ir.actions.act_window" id="crm.crm_lead_all_leads">
+        <field name="name">Leads</field>
+        <field name="res_model">crm.lead</field>
+        <field name="view_mode">tree,kanban,graph,pivot,calendar,form,activity</field>
+        <field name="domain">[('type','=','lead')]</field>
+        <field name="search_view_id" ref="crm.view_crm_case_leads_filter"/>
+        <field name="context">{
+                'default_type':'lead',
+                'search_default_type': 'lead',
+                'search_default_to_process':1,
+            }
         </field>
     </record>
 
@@ -301,16 +349,26 @@
                     <field name="city"/>
                     <field name="state_id"/>
                     <field name="zip"/>
-                    <field name="email_from"/>
-                    <field name="phone"/>
                     <field name="classification"/>
-                    <field name="medium_id" string="Source"/>
-                    <field name="lead_owner_id"/>
+                    <field name="source_id" string="Source"/>
+                    <field name="user_id"/>
+                    <field name="team_id"/>
                     <field name="active" invisible="1"/>
                     <field name="message_needaction" invisible="1"/>
                     <field name="probability" invisible="1"/>
                 </tree>
             </xpath>
         </field>
+    </record>
+
+    <record model="ir.actions.act_window" id="crm.crm_lead_opportunities_tree_view">
+        <field name="name">Pipeline</field>
+        <field name="res_model">crm.lead</field>
+        <field name="view_mode">kanban,tree,graph,pivot,form,calendar,activity</field>
+        <field name="domain">[('type','=','opportunity')]</field>
+        <field name="context">{
+                'default_type': 'opportunity'
+        }</field>
+        <field name="search_view_id" ref="crm.view_crm_case_opportunities_filter"/>
     </record>
 </odoo>
